--- a/package.json
+++ b/package.json
@@ -1,5 +1,5 @@
 {
-  "name": "div-editor",
+  "name": "publish",
   "version": "1.0.0",
   "description": "A Vue.js project",
   "author": "yanglingfeng <1119030015@qq.com>",
